2001-11-05  Mark McLoughlin  <mark@skynet.ie>

	* applet.c: (applet_button_press): only propagate event to
	button widgets.

2001-11-01  Mark McLoughlin  <mark@skynet.ie>

	A first stab at BonoboControl based applets. It works
	suprisingly well for 84 lines of code :)

	* panel-applet-frame.c, panel-applet-frame.h: new files.
	BonoboControl based applet support.

	* applet.h: add new AppletType - APPLET_BONOBO.

	* menu.c: (add_test_bonobo_applet): impl.
	(make_add_submenu): add new menuitem to activate a
	test bonobo applet.

	* test-bonobo-applet.c: BonoboControl based test applet.

	* GNOME_Panel_TestApplet.server.in: add TestBonoboApplet.

	* Makefile.am: upd.

2001-11-01  Mark McLoughlin  <mark@skynet.ie>

	* applet-object.c: (applet_object_panel_quit), (applet_object_new):
	free panel CORBA refs.

	* applet-widget.c: kill applet_count stuff.

2001-11-01  Mark McLoughlin  <mark@skynet.ie>

	* applet-object.c: (impl_GNOME_Applet2_back_change): add case
	for PANEL_BACK_NONE.

	* main.c: (main): set BONOBO_ACTIVATION_DEBUG_OUTPUT for easy
	applet debugging.

	* applet-init.c, applet-init.h:, applet-widget.c, 
	  test-applet.c: remove crufty debugging stuff. sigh.

2001-11-01  Mark McLoughlin  <mark@skynet.ie>

	* panel-util.c: (panel_show_help): update for gnome-help
	changes.

2001-11-01  Glynn Foster  <glynn.foster@sun.com>

	* applet.c: * basep-widget.c: * basep-widget.h:
	* border-widget.c: * border-widget.h: * button-widget.c: 
	* conditional.c: * conditional.h: * drawer-widget.c: 
	* drawer-widget.h: * drawer.c: * extern.c: * floating-widget.c: 
	* floating-widget.h: * foobar-widget.c: * global-keys.c: 
	* menu-util.c: * menu.c: * multiscreen-stuff.c: * panel.c: 
	* panel_config.h: * session.c: * xstuff.c:

	Start shifting stuff slowly over towards a more GObject approach and
	making things a little bit more consistant with the type defs.
	
2001-10-31  Mark McLoughlin  <mark@skynet.ie>

	* applet-widget.c: kill old goad factory stuff.
